# messelpit

./: .gitignore  CLAUDE.md  CLAUDE_readme.md  Protokoll_Emily.txt  README.md  pyproject.toml
data/: tile_manifest.txt
specs/: messel-pit-usd.md
src/messelpit/: build_usd.py
tools/: build_variants.ps1  combine_veg_masks.py  download_messel_data.py  make_veg_mask.py  prep_rasters.py  smoke_test.py  smooth_dem.py
vegetation_troubleshooting/: make_veg_mask.py  smooth_dem.py
