[project]
name = "messelpit"
version = "0.1.0"
description = "Build a USD heightfield of the Messel Pit (Hessen, Germany) from open DGM1 + DOP20 data, viewable in NVIDIA Omniverse."
requires-python = ">=3.11"
dependencies = [
    "rasterio>=1.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "pillow>=10",
    "usd-core>=24.05",
    "rich>=13",
    "rich-argparse>=1.4",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/messelpit"]
